Бот обработал одно сообщение, добавил его в базу и перестал работать, стал выдавать ошибку при запуске.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=Vae5lath
 spring.jpa.hibernate.ddl-auto=update
 
 telegram.bot.token=6964776169:AAEt7sNxiRRW4zmX_u_q1jsX8b29WLZO1Po
+
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
